--- a/tools/pck-retrieval-tool/app/Cargo.toml
+++ b/tools/pck-retrieval-tool/app/Cargo.toml
@@ -6,8 +6,8 @@ build = "build.rs"
 edition = "2018"
 
 [dependencies]
-base64      = "0.13.0"
-serde       = "1.0.123"
+serde       = { version = "1.0.123", features = ["derive"] }
+serde_json  = "1.0.62"
 sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
 sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
 
