--- a/tools/pck-retrieval-tool/app/Cargo.toml
+++ b/tools/pck-retrieval-tool/app/Cargo.toml
@@ -6,7 +6,7 @@ build = "build.rs"
 edition = "2018"
 
 [dependencies]
-clap-v3     = "3.0.0-beta.1"
+clap        = { version = "3.0.0-beta.1", package = "clap-v3" }
 serde       = { version = "1.0.123", features = ["derive"] }
 serde_json  = "1.0.62"
 sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
