--- a/quote/qv/Cargo.toml
+++ b/quote/qv/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lazy_static = "1.4.0"
+
 sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
 sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
